centering items correctly on ios

--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -1,5 +1,6 @@
 .centered {
-  justify-self: center;
+  display: flex;
+  justify-content: center;
 }
 
 .top-controls {
