--- a/src/app/documentation/documentation.scss
+++ b/src/app/documentation/documentation.scss
@@ -1,5 +1,6 @@
 .title {
-  justify-self: center;
+  display: flex;
+  justify-content: center;
 }
 
 .page {
